cmake_minimum_required(VERSION 3.19)
project(binary_tree)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(binary_tree binary_tree.cpp)
add_executable(kmp kmp.cpp)
add_executable(inorder_thread_binary_tree inorder_thread_binary_tree.cpp)
add_executable(preorder_thread_binary_tree preorder_thread_binary_tree.cpp)
add_executable(postorder_thread_binary_tree postorder_thread_binary_tree.cpp)
add_executable(binary_sort_tree binary_sort_tree.cpp)
add_executable(huffman_tree huffman_tree.cpp)
add_executable(graph_adjacent_matrix graph_adjacent_matrix.cpp)
add_executable(graph_adjacent_list graph_adjacent_list.cpp)
add_executable(binary_search binary_search.cpp)
add_executable(block_search block_search.cpp)
add_executable(insert_sort insert_sort.cpp)
add_executable(shell_sort shell_sort.cpp)
add_executable(bubble_sort bubble_sort.cpp)
add_executable(quick_sort quick_sort.cpp)
add_executable(selection_sort selection_sort.cpp)
add_executable(heap_sort heap_sort.cpp)
add_executable(merge_sort merge_sort.cpp)